; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_sock.c_sys_socket.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_sock.c_sys_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"socket(%d, %d, %d)\00", align 1
@_EINVAL = common dso_local global i64 0, align 8
@SOCK_RAW_ = common dso_local global i32 0, align 4
@IPPROTO_RAW = common dso_local global i32 0, align 4
@IPPROTO_ICMP = common dso_local global i32 0, align 4
@AF_INET_ = common dso_local global i32 0, align 4
@IPPROTO_IP = common dso_local global i32 0, align 4
@IP_STRIPHDR = common dso_local global i32 0, align 4
@SOCK_DGRAM_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sys_socket(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @STRACE(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @sock_family_to_real(i32 %16)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i64, i64* @_EINVAL, align 8
  store i64 %21, i64* %4, align 8
  br label %62

22:                                               ; preds = %3
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @sock_type_to_real(i32 %23, i32 %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i64, i64* @_EINVAL, align 8
  store i64 %29, i64* %4, align 8
  br label %62

30:                                               ; preds = %22
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* @SOCK_RAW_, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %34, label %40

34:                                               ; preds = %30
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* @IPPROTO_RAW, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %38, label %40

38:                                               ; preds = %34
  %39 = load i32, i32* @IPPROTO_ICMP, align 4
  store i32 %39, i32* %7, align 4
  br label %40

40:                                               ; preds = %38, %34, %30
  %41 = load i32, i32* %8, align 4
  %42 = load i32, i32* %9, align 4
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @socket(i32 %41, i32 %42, i32 %43)
  store i32 %44, i32* %10, align 4
  %45 = load i32, i32* %10, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %40
  %48 = call i64 (...) @errno_map()
  store i64 %48, i64* %4, align 8
  br label %62

49:                                               ; preds = %40
  %50 = load i32, i32* %10, align 4
  %51 = load i32, i32* %5, align 4
  %52 = load i32, i32* %6, align 4
  %53 = load i32, i32* %7, align 4
  %54 = call i64 @sock_fd_create(i32 %50, i32 %51, i32 %52, i32 %53)
  store i64 %54, i64* %11, align 8
  %55 = load i64, i64* %11, align 8
  %56 = icmp slt i64 %55, 0
  br i1 %56, label %57, label %60

57:                                               ; preds = %49
  %58 = load i32, i32* %10, align 4
  %59 = call i32 @close(i32 %58)
  br label %60

60:                                               ; preds = %57, %49
  %61 = load i64, i64* %11, align 8
  store i64 %61, i64* %4, align 8
  br label %62

62:                                               ; preds = %60, %47, %28, %20
  %63 = load i64, i64* %4, align 8
  ret i64 %63
}

declare dso_local i32 @STRACE(i8*, i32, i32, i32) #1

declare dso_local i32 @sock_family_to_real(i32) #1

declare dso_local i32 @sock_type_to_real(i32, i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i64 @errno_map(...) #1

declare dso_local i64 @sock_fd_create(i32, i32, i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
